--- a/WebAppProject-main/DOCKERFILE 
+++ b/WebAppProject-main/DOCKERFILE 
@@ -1,30 +1,30 @@
 # INCLUDE DOCKERFIULE WORK HERE
-From unbuntu
-18.04
+From python:3.8
 
-RUN apt-get update
+#CD?
+ENV  HOME / root
 
+WORKDIR /root
 
-    ENV  HOME /
-
-   WORKDIR /
-
-
-
-
-RUN apt-get update –fix-missing
-RUN apt-get install y- nodejs
-RUN apt-get install-y npm
-
-
-
-
-
-COPY
-
-
+COPY . .
 
 # dependices
-RUN request.py  install request.py
+
+RUN pip3 install -Router.py
+RUN pip3 install -request.py
+RUN pip3 install -server.py
+
+
+# all the photos,icons too?
+
+
+
+EXPOSE 8080
+
+CMD python3 -u
+#(name?)
+
+
+
 
 
